// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeAreaView can override padding styles 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    style={
      {
        "paddingTop": 0,
      }
    }
  >
    <View />
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;

exports[`SafeAreaView renders 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView>
    <View />
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;
